resources/css/styles.css
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");

@font-face {
    font-family: 'Khand Regular';
    font-style: normal;
    font-weight: normal;
    src: local('Khand Regular'), url('/resources/fonts/Khand-Regular.woff') format('woff');
}

html, body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

#root {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

header {
    height: 72px;
}

.w-90 {
    width: 83px;
}

.bi-cup-hot-fill {
    top: -2.5px;
}

.shopping-page-padding {
    padding-left: 6rem;
    padding-right: 6rem;
}

.banner-color {
    background-color: #E8E8EE;
}

.banner {
    overflow: hidden;
}

.khandi-font {
    font-family: 'Khand Regular';
}
.inter-font {
    font-family: "Inter";
}

.inn-shadow {
    box-shadow: inset 0 4px 15px rgba(0, 0, 0, 0.2);
}

.inn-shadow {
    box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.2);
}


.w-30 {
    width: 30%;
}
.w-25rem {
    width: 25rem;
}

.w-20rem {
    width: 23rem;
}

.h-15rem {
    height: 15rem;
}

.min-h-15rem {
    min-height: 15rem;
}

.fs-2rem {
    font-size: 2.65rem;
}

.fs-small {
    font-size: 0.8rem;
}

.bottom-25 {
    bottom: 25%;
}

.img-clip-path {
    height: 150px;
    /* display: block;
    object-fit: cover; */
    background-repeat: no-repeat; 
    background-size: cover; 
}


.card-img-container {
    width: 100%;
    height: 192px;
    overflow: hidden;
}
.card-img-container-vertical {
    /* width: 100%; */
    height: 100%;
    overflow: hidden;
}
 
.order-img {
    max-height: 131px ;
    width: auto;
    overflow: hidden;
}

.order-card {
    max-height: 9rem; 
    max-width: 43rem;
    overflow: hidden;
}

.order-badge {
    background-color: #F8F9FA;
}
.order-spinner {
    border-color: #DEE2E6 !important;
    
}

.order-spinner:hover {
    background-color: #2d2d2d !important;
    color: #DEE2E6 !important;
}
.order-badge-container {
    min-width: 6.4rem;
    min-height: 100%;
}

.order-main-content {
    min-width: 18rem; 
}

.card-img-container img {
    width: 100%;
    height: 100%;
    object-fit: cover; /* Corta e ajusta a imagem para preencher o contêiner */
}

.product-card {
    width: 22rem;
}
/* .order-list {
    justify-content: space-between;
    column-gap: 1rem;
} */


footer {
    justify-self: end;
    min-height: 40px;
}

.cartPage {
    max-width: 50rem;
}

@media only screen and (max-width: 1280px) {
    .product-list {
        justify-content: flex-start; /* Alinha os itens à esquerda */
        column-gap: 3rem;
    }
}

@media only screen and (max-width: 944px) {
    .product-list {
        justify-content: center; /* Alinha os itens à esquerda */
       
    }
    .product-card {
        width: 30rem;
    }
    .min-h-15rem {
        min-height: 20rem;
    }
    .h-15rem {
        height: 20rem;
    }
}

